# compas_cgal

./: .bumpversion.cfg  .editorconfig  .gitignore  404.html  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO.md  env_linux.yml  env_osx.yml  env_win.yml  environment.yml  index.html  input_A.off  input_B.off  mkdocs.yml  objects.inv  output.off  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-viz.txt  requirements.txt  setup.cfg  setup.py  setup_cmake.py  sitemap.xml  tasks.py  versions.json
0.7.1/: api.html  devguide.html  examples.html  index.html  search.html  searchindex.js
0.7.2/: api.html  devguide.html  examples.html  genindex.html  index.html  objects.inv
0.7.4/: acknowledgements.html  api.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  searchindex.js
0.7.5/: acknowledgements.html  api.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html
0.7.6/: acknowledgements.html  api.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html
0.7.7/: acknowledgements.html  api.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html
0.8.0/: acknowledgements.html  api.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html
0.9.0/: acknowledgements.html  api.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html
0.9.1/: acknowledgements.html  api.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js
acknowledgements/: index.html
changelog/: index.html
cmake/: CompasCGALDependencies.cmake  CompasCGALDownloadExternal.cmake
conda.recipe/: bld.bat  build.sh  meta.yaml
data/: box.ply  elephant.off  polygonal_sphere.ply  rhinovault_mesh_0.ply  rhinovault_mesh_0.plybak  rhinovault_mesh_1.mtl  rhinovault_mesh_1.objbak  rhinovault_mesh_1.ply  rhinovault_mesh_1.plybak  rv2.ply  rv2_remeshed.ply  two_intersecting_boxes.ply
devguide/: cmake_configuration.rst  conda_environment.rst  contribute.rst  style.rst  types.rst
docs/: acknowledgements.rst  api.rst  conf.py  critique_toolpath_cgal_primitives.md  devguide.rst  gettingstarted.rst  index.md  index.rst  installation.md  installation.rst  license.md
docsource/: conf.py  index.rst
examples/: booleans.py  booleans_rhino.py  example_booleans_with_edges.py  example_booleans_with_face_source.py  example_geodesics.py  example_intersections.py  example_isolines.py  example_measure.py  example_meshing.py  example_reconstruction_pointset_outlier_removal.py  example_reconstruction_pointset_reduction.py  example_reconstruction_pointset_smoothing.py  example_skeletonization.py  example_skeletonization_with_mapping.py  example_slicer.py  example_straight_skeleton_2_interior_straight_skeleton.py  example_straight_skeleton_2_interior_straight_skeleton_weighted_offset_polygon.py  example_triangulation.py  intersections.py  remeshing.py  slicer.py  slicer_rhino.py
include/: compas.h  compas.hpp  compas_cgal.hpp  trimesh.h
installation/: index.html
latest/: .buildinfo  acknowledgements.html  api.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js
license/: index.html
recipe/: sha256.py
scripts/: basic.py  booleans.json  cdt.py  measure.py  meshing_remesh.py  script_booleans.py  script_intersections.py  script_measure.py  script_meshing.py  script_reconstruction_pointset_normal_estimation.py  script_reconstruction_pointset_outlier_removal.py  script_reconstruction_pointset_reduction.py  script_reconstruction_pointset_smoothing.py  script_reconstruction_poisson_surface_reconstruction.py  script_skeletonization.py  script_slicer.py  script_straight_skeleton_2_interior_straight_skeleton.py  script_straight_skeleton_2_interior_straight_skeleton_offset_polygon.py  script_straight_skeleton_2_interior_straight_skeleton_weighted_offset_polygon.py  script_straight_skeleton_2_interior_straight_skeleton_weighted_offset_polygons.py  script_straight_skeleton_2_interior_straight_skeleton_with_holes.py  subd.py  subd2.py  test_booleans.py  test_booleans_rhino.py  test_hello.py  test_intersections.py  test_mesh.py  test_meshing.py  test_remeshing.py  test_slicer.py  test_union.py  test_volume.py
search/: search_index.json
src/: booleans.cpp  booleans.h  compas.cpp  compas.h  compas_cgal.cpp  compas_cgal_hello_world.cpp  geodesics.cpp  geodesics.h  hello.cpp  intersections.cpp  intersections.h  isolines.cpp  measure.cpp  measure.h  measuring.cpp  measuring.h  mesh.cpp  meshing.cpp  meshing.h  nanobind_types.h  polygonal_surface_reconstruction.cpp  polygonal_surface_reconstruction.h  polylines.cpp  polylines.h  reconstruction.cpp  reconstruction.h  skeletonization.cpp  skeletonization.h  slicer.cpp  slicer.h  stdafx.cpp  stdafx.h  straight_skeleton_2.cpp  straight_skeleton_2.h  subdivision.cpp  subdivision.h  toolpath.cpp  toolpath.h  triangulation.cpp  triangulation.h  (+5 more)
stable/: index.html
tests/: _test_remeshing.py  _test_slicer.py  test_basic.py  test_booleans.py  test_geodesics.py  test_intersections.py  test_isolines.py  test_measure.py  test_meshing.py  test_meshing_remesh.py  test_nanobind.py  test_polylines.py  test_projection.py  test_reconstruction_pointset_normal_estimation.py  test_reconstruction_pointset_outlier_removal.py  test_reconstruction_pointset_reduction.py  test_reconstruction_pointset_smoothing.py  test_reconstruction_poisson_surface_reconstruction.py  test_remeshing.py  test_skeletonization.py  test_slicer.py  test_straight_skeleton_2.py  test_straight_skeleton_2_interior_straight_skeleton.py  test_straight_skeleton_2_interior_straight_skeleton_offset_polygon.py  test_subdivision.py  (+5 more)
(+587 files in other folders)
